--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 
 </head>
 
